ScoreHistory설계